fixed overflow css, fixed flashing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  overflow-x: hidden;
 }
 
 main {
@@ -185,6 +184,7 @@ main {
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-x: hidden;
       grid-template-areas: "test" "info" "button";
   -ms-grid-rows: (3)[1fr];
       grid-template-rows: repeat(1fr, 3);
@@ -264,6 +264,8 @@ main .start-btn-container {
 .modal {
   height: 100%;
   width: 100%;
+  pointer-events: none;
+  visibility: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -289,6 +291,7 @@ main .start-btn-container {
 }
 
 .modal.visible {
+  visibility: visible;
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
